manual/ingress/02/authentik/outpost_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-outpost
  annotations:
    kubernetes.io/ingress.class: nginx-public
spec:
  rules:
    - host: authentik.abdothiago.ml
      http:
        paths:
          - path: /outpost.goauthentik.io
            pathType: Prefix
            backend:
              service:
                name: ak-outpost-mainoutpost
                port: 
                  number: 9000
